[package]
name = "streaming-prototyping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
livekit = { version = "0.1.2" }
log = "0.4"
